# django-pages-app

./: pyproject.toml
pages/: urls.py
pages_app/: settings.py  urls.py
templates/: about.html  base.html  home.html
