[tool.poetry]
name = "pages-app"
version = "0.1.0"
description = ""
authors = ["Dagore-dev <david.gomez.redondo.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "pages_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
